<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BC-Exchanger</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_fragment_tab1">FragmentTab1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmentA">This is fragment A</string>
    <string name="fragmentB">This is fragment B</string>
    <string name="fragmentC">This is fragment C</string>
    <string name="action_searcher">Search</string>
    <string name="action_send">Send card</string>
    <string name="action_overflow">overflow</string>
    <string name="naam">Naam: </string>
    <string name="naamCard">Test</string>
    <string name="adres">Adres: </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_edit_card">EditCardActivity</string>
    <string name="buttonEditMyCard">Edit</string>
    <string name="setBackgroundImage">Set background Image</string>
    <string name="chooseColor">Choose Background</string>
    <string name="search_hint">Search by Name, Company, etc.</string>
    <string name="SaveEditMyCard">Save</string>
    <string name="Bedrijf">Bedrijf: </string>
    <string name="telefoon">Telefoon nummer:</string>
    <string name="functie">Functie: </string>
    <string name="TakePictureCard">Take Picture</string>
    <string name="photo">Photo Contact:</string>
    <string name="pictureOnCard">Picture on the card</string>
    <string name="call">Call</string>
    <string name="sendTextMessage">Send Text Message</string>
    <string name="email">Send Email</string>
    <string name="addToContacts">Add To Contacts</string>
    <string name="waarGekregen">Where did I get this card?</string>
    <string name="waaromGekregen">Why did I get this card?</string>
    <string name="setEmail">Email:</string>
    <string name="setBackground">Set Background</string>
    <string name="BackgroundCard">Change Background</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="noCardsFound">No Cards Found</string>
    <string name="noCollection">There are no Cards in your Collection</string>

</resources>
