<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:id="@+id/activity_edit_card">
    
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/naam"
            android:text="@string/naamCard"
            android:id="@+id/naamContact" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/adres" />
        
        
    </LinearLayout>
<RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SaveEditMyCard"
            android:onClick="SaveMyCard" 
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            />
</RelativeLayout>

</RelativeLayout>
